--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-live": "^4.1.8",
     "react-router": "^7.8.0",
     "react-router-dom": "^7.8.0",
-    "react-use-websocket": "^4.13.0"
+    "react-use-websocket": "^4.13.0",
+    "tailwind-scrollbar-hide": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
